--- a/CommonViewApp/CommonView/src/main/res/values/attrs.xml
+++ b/CommonViewApp/CommonView/src/main/res/values/attrs.xml
@@ -22,4 +22,26 @@
         <attr name="maxLine"  format="reference|integer"/>
     </declare-styleable>
 
+    <declare-styleable name="StarRatingBar">
+        <!-- 默认的星星图片 优先级高于绘制的星星 -->
+        <attr name="defaultStar" format="reference"/>
+        <!-- 选中的星星图片 -->
+        <attr name="star" format="reference"/>
+        <!-- 默认的星星颜色 -->
+        <attr name="defaultStarColor" format="color|reference"/>
+        <!-- 选中的星星颜色 -->
+        <attr name="starColor" format="color|reference"/>
+        <!-- 星星的个数 -->
+        <attr name="starNum" format="integer|reference"/>
+        <!-- 可选的星星的步长 如：0.5表示可选半颗星 -->
+        <attr name="starStep" format="float|reference"/>
+        <!-- 星星之间的间距 -->
+        <attr name="starGap" format="dimension|reference"/>
+        <!-- 星星的大小 -->
+        <attr name="starSize" format="dimension|reference"/>
+        <!-- 选中星星的部分 小于等于starNum -->
+        <attr name="rating" format="float|reference"/>
+        <!-- 星星是否响应事件 默认为true 表示仅作为展示 -->
+        <attr name="isIndicator" format="boolean|reference"/>
+    </declare-styleable>
 </resources>
