--- a/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
+++ b/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
@@ -9,7 +9,7 @@
         android:id="@+id/slidingTab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:sliding_tl_fill_viewport="true"
+        android:fillViewport="true"
         >
     </org.heaven7.core.view.SlidingTabLayout>
 
