--- a/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
+++ b/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         >
     </org.heaven7.core.view.SlidingTabLayout>
 
