--- a/CommonViewApp/app/src/main/res/layout/tab_transport_bill.xml
+++ b/CommonViewApp/app/src/main/res/layout/tab_transport_bill.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="88dp"
     android:layout_height="wrap_content"
     android:paddingStart="14dp"
     android:paddingEnd="14dp"
