--- a/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
+++ b/CommonViewApp/app/src/main/res/layout/ac_test_sliding_tab.xml
@@ -15,9 +15,9 @@
         >
     </org.heaven7.core.view.SlidingTabLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
