--- a/CommonViewApp/app/src/main/res/layout/tab_transport_bill.xml
+++ b/CommonViewApp/app/src/main/res/layout/tab_transport_bill.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="6dp"
     >
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_tab"
         style="@style/tv_common"
         android:layout_gravity="center"
